--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-    "name": "phonegap-plugin-push",
-    "description": "Register and receive push notifications.",
-    "version": "1.3.0",
-    "homepage": "http://github.com/phonegap/phonegap-plugin-push#readme",
+    "name": "phonegap-plugin-push-nn",
+    "description": "Register and receive push notifications. - Forked to enable phonegap-build with 1.3.0",
+    "version": "1.3.0-r1",
+    "homepage": "http://github.com/nnexai/phonegap-plugin-push#readme",
     "repository": {
         "type": "git",
-        "url": "git://github.com/phonegap/phonegap-plugin-push.git"
+        "url": "git://github.com/nnexai/phonegap-plugin-push.git"
     },
     "bugs": {
-        "url": "https://github.com/phonegap/phonegap-plugin-push/issues"
+        "url": "https://github.com/nnexai/phonegap-plugin-push/issues"
     },
     "cordova": {
-        "id": "phonegap-plugin-push",
+        "id": "phonegap-plugin-push-nn",
         "platforms": [
             "ios",
             "android",
