--- a/plugin.xml
+++ b/plugin.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:amazon="http://schemas.android.com/apk/lib/com.amazon.device.ads"
     xmlns:rim="http://www.blackberry.com/ns/widgets"
-    id="phonegap-plugin-push"
-    version="1.3.0">
+    id="phonegap-plugin-push-nn"
+    version="1.3.0-r1">
 
   <name>PushPlugin</name>
 	<author>Bob Easterday</author>
@@ -57,7 +57,7 @@
 			<service android:name="com.adobe.phonegap.push.GCMIntentService" />
 		</config-file>
 
-		<framework src="com.android.support:support-v13:23+" />
+		<dependency id="android.support.v13" url="https://github.com/nnexai/cordova-plugin-android-support-v13.git"/>
 
 		<source-file src="src/android/libs/gcm.jar" target-dir="libs/" />
 		<source-file src="src/android/com/adobe/phonegap/push/CordovaGCMBroadcastReceiver.java" target-dir="src/com/adobe/phonegap/push/" />
